Revert "PP-8125 Stripe - Get credentials by payment provider"