@@ -3,24 +3,25 @@ package uk.gov.pay.connector.gatewayaccount.service;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnitRunner;
 import uk.gov.pay.connector.gatewayaccount.model.GatewayAccountEntity;
 import uk.gov.pay.connector.gatewayaccount.model.StripeAccountResponse;
 
 import java.util.Collections;
-import java.util.Map;
 import java.util.Optional;
 
-import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.Is.is;
-import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccountEntityFixture.aGatewayAccountEntity;
+import static org.junit.Assert.assertThat;
+import static org.mockito.BDDMockito.given;
 
 @RunWith(MockitoJUnitRunner.class)
 public class StripeAccountServiceTest {
 
     private StripeAccountService stripeAccountService;
 
-    private GatewayAccountEntity gatewayAccountEntity;
+    @Mock
+    private GatewayAccountEntity mockGatewayAccountEntity;
 
     @Before
     public void setUp() {
@@ -30,40 +31,44 @@ public class StripeAccountServiceTest {
     @Test
     public void buildStripeAccountResponseShouldReturnStripeAccountResponse() {
         String stripeAccountId = "acct_123example123";
-        gatewayAccountEntity = aServiceAccount(Map.of("stripe_account_id", stripeAccountId));
+        given(mockGatewayAccountEntity.getCredentials())
+                .willReturn(Collections.singletonMap("stripe_account_id", stripeAccountId));
 
         Optional<StripeAccountResponse> stripeAccountResponseOptional =
-                stripeAccountService.buildStripeAccountResponse(gatewayAccountEntity);
+                stripeAccountService.buildStripeAccountResponse(mockGatewayAccountEntity);
 
         assertThat(stripeAccountResponseOptional.get().getStripeAccountId(), is(stripeAccountId));
     }
 
     @Test
-    public void buildStripeAccountResponseShouldReturnEmptyOptionalWhenCredentialsAreEmpty() {
-        gatewayAccountEntity = aServiceAccount(Map.of());
+    public void buildStripeAccountResponseShouldReturnEmptyOptionalWhenCredentialsIsNull() {
+        given(mockGatewayAccountEntity.getCredentials()).willReturn(null);
 
         Optional<StripeAccountResponse> stripeAccountResponseOptional =
-                stripeAccountService.buildStripeAccountResponse(gatewayAccountEntity);
+                stripeAccountService.buildStripeAccountResponse(mockGatewayAccountEntity);
+
+        assertThat(stripeAccountResponseOptional.isPresent(), is(false));
+    }
+
+    @Test
+    public void buildStripeAccountResponseShouldReturnEmptyOptionalWhenCredentialsAreEmpty() {
+        given(mockGatewayAccountEntity.getCredentials()).willReturn(Collections.emptyMap());
+
+        Optional<StripeAccountResponse> stripeAccountResponseOptional =
+                stripeAccountService.buildStripeAccountResponse(mockGatewayAccountEntity);
 
         assertThat(stripeAccountResponseOptional.isPresent(), is(false));
     }
 
     @Test
     public void buildStripeAccountResponseShouldReturnEmptyOptionalWhenCredentialsPropertyIsNull() {
-        gatewayAccountEntity = aServiceAccount(Collections.singletonMap("stripe_account_id", null));
+        given(mockGatewayAccountEntity.getCredentials())
+                .willReturn(Collections.singletonMap("stripe_account_id", null));
 
         Optional<StripeAccountResponse> stripeAccountResponseOptional =
-                stripeAccountService.buildStripeAccountResponse(gatewayAccountEntity);
+                stripeAccountService.buildStripeAccountResponse(mockGatewayAccountEntity);
 
         assertThat(stripeAccountResponseOptional.isPresent(), is(false));
     }
 
-    private GatewayAccountEntity aServiceAccount(Map credentials) {
-        GatewayAccountEntity gatewayAccountEntity = aGatewayAccountEntity()
-                .withGatewayName("stripe")
-                .withCredentials(credentials)
-                .build();
-
-        return gatewayAccountEntity;
-    }
 }
